--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,19 @@
+﻿autopep8==2.0.0
 bcrypt==4.0.1
 cffi==1.15.1
-cryptography==41.0.1
-py-bcrypt==0.4
+click==8.1.3
+colorama==0.4.6
+cryptography==38.0.3
+Flask==2.2.2
+greenlet==2.0.1
+gunicorn==20.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+pycodestyle==2.10.0
 pycparser==2.21
+PyMySQL==1.0.2
+python-dotenv==0.21.0
+SQLAlchemy==1.4.44
+tomli==2.0.1
+Werkzeug==2.2.2
