--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 bcrypt==4.0.1
 blinker==1.6.2
 cffi==1.15.1
-click==8.1.4
+click==8.1.3
 colorama==0.4.6
 cryptography==41.0.1
 Flask==2.3.2
+greenlet==2.0.2
 gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
-py-bcrypt==0.4
 pycparser==2.21
+PyMySQL==1.0.3
+python-dotenv==1.0.0
+SQLAlchemy==2.0.16
+typing_extensions==4.6.3
 Werkzeug==2.3.6
-PyMySQL==1.0.2
-python-dotenv==0.21.0
-SQLAlchemy==1.4.44
-tomli==2.0.1
